--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "composer/semver": "^3.4",
         "directorytree/authorization": "^1.2",
         "juststeveking/sdk-tools": "^0.0.5",
         "laravel/framework": "^11.9",
