--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
         "laravel/breeze": "^2.1",
         "laravel/pint": "^1.17",
         "laravel/sail": "^1.26",
+        "laravel/telescope": "^5.2",
         "mockery/mockery": "^1.6",
         "nunomaduro/collision": "^8.0",
         "phpunit/phpunit": "^11.0.1"
